--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
+    "bootstrap": "^5.2.1",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "react-bootstrap": "^2.5.0",
     "sass": "^1.54.9",
     "typescript": "4.8.3"
   }
