--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "sourceMap": true,
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages"],
   "exclude": ["node_modules"]
 }
